# AIma

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  start.py
assets/docs/: kernel-api-for-ai.md  kernel-architecture.md
configs/: aima_kernel_template.yaml  default.yaml  full_match.yaml  local_model.yaml  player_battle.yaml  quick_test.yaml  template.yaml  watch_mode.yaml
configs/players/aggressive_bot_v1/: memory.json  profile.json  (+1 more)
demo/: README.md  build_demo.py  complex_game.json  run_demo.py
mahjong_rules/: Mahjong_Soul.md
probe/: 2026-04-23_ui_architecture_review.md
scripts/: ascii_converter.py  generate_tiles.py
src/kernel/: README.md  __init__.py  config.py  event_log.py  replay.py  replay_json.py
src/llm/: README.md  __init__.py  __main__.py  action_build.py  cli.py  config.py  constants.py  observation_format.py  parse.py  protocol.py  runner.py  simple_log.py  table_snapshot_text.py  turns.py  validate.py  wire.py
src/ui/: README.md  __init__.py  demo.py  demo_fixtures.py  interactive.py  match_labels.py  meld_render.py  render.py  terminal_rich.py  tiles.py  token_diagnostics.py  utils.py
src/web/: README.md  __init__.py
tests/: call_helpers.py  llm_test_utils.py  test_call.py  test_conversation_logger.py  test_deal.py  test_deck.py  test_dora.py  test_engine.py  test_event_log.py  test_flow.py  test_hand.py  test_kan.py  test_legal_actions.py  test_legal_actions_melds.py  test_llm_context_projection.py  test_llm_log_session.py  test_llm_mock_client.py  test_llm_parse_validate.py  test_llm_seat_profiles.py  test_llm_session_audit.py  test_llm_skip_singleton_pass.py  test_llm_token_budget.py  test_llm_turns_runner.py  test_llm_wire.py  test_nagashi_mangan_payments.py  test_pinfu.py  test_play.py  test_replay_json.py  test_riichi.py  test_scoring.py  test_table.py  test_table_snapshot_text.py  test_table_transitions.py  test_tsumo.py  test_ui_interactive.py  test_ui_terminal.py  test_wall.py  test_web_api_mvp.py  test_win_shape.py  test_yaku_extensions.py  (+1 more)
(+173 files in other folders)
