[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aima"
version = "0.0.1"
description = "Riichi mahjong engine (kernel)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.3"]
ui = ["Pillow>=10.0"]
web = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "pydantic>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kernel*", "ui*", "web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
