[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aima"
version = "0.0.1"
description = "Riichi mahjong engine (kernel)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.3"]
llm = ["httpx>=0.27", "python-dotenv>=1.0", "pyyaml>=6.0"]
rich = [
    "pillow>=10.0",
    "prompt-toolkit>=3.0",
    "questionary>=2.0",
    "rich>=14.2",
    "textual>=8.2",
    "wcwidth>=0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kernel*", "llm*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
